[package]
name = "rss_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.20",features = ["macros"]  }
rss = "2.0.6"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.7", features = [ "runtime-tokio" ,"sqlite","macros"] }
axum-macros = "0.3.8"
chrono = "0.4.30"

[dev-dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
